--- a/app/views/ratings/show.html.erb
+++ b/app/views/ratings/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <b>User:</b>
-  <%= @rating.user %>
+  <%= @rating.user_name %>
 </p>
 
 <p>
   <b>Movie:</b>
-  <%= @rating.movie %>
+  <%= @rating.movie_name %>
 </p>
 
 
