--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -11,19 +11,28 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+  <div class="control-group">
+    <%= f.label :name, class:'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :genre %><br />
-    <%= f.text_field :genre %>
+
+  <div class="control-group">
+    <%= f.label :genre, class:'control-label' %>
+    <div class="controls">
+      <%= f.text_field :genre %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :year %><br />
-    <%= f.number_field :year %>
+
+  <div class="control-group">
+    <%= f.label :year, class:'control-label' %>
+    <div class="controls">
+      <%= f.text_field :year %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-actions">
+    <%= f.submit class:"btn btn-primary" %>
   </div>
 <% end %>
