--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(@rating) do |f| %>
+<%= form_for(@rating, html: {
+class: "form-horizontal"
+}) do |f| %>
   <% if @rating.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@rating.errors.count, "error") %> prohibited this rating from being saved:</h2>
@@ -11,19 +13,50 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :score %><br />
-    <%= f.number_field :score %>
+  <div class="control-group">
+    <%= f.label :score, class:'control-label' %>
+    <div class="controls">
+      <label class="radio inline">
+        <%= f.radio_button(:score, 1) %>
+        <%= f.label(:score, "1") %>
+      </label>
+      <label class="radio inline">
+        <%= f.radio_button(:score, 2) %>
+        <%= f.label(:score, "2") %>
+      </label>
+      <label class="radio inline">
+        <%= f.radio_button(:score, 3) %>
+        <%= f.label(:score, "3") %>
+      </label>
+      <label class="radio inline">
+        <%= f.radio_button(:score, 4) %>
+        <%= f.label(:score, "4") %>
+      </label>
+      <label class="radio inline">
+        <%= f.radio_button(:score, 5) %>
+        <%= f.label(:score, "5") %>
+      </label>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
+
+  <div class="control-group">
+    <%= f.label :user, class:'control-label' %>
+    <div class="controls">
+      <%= f.collection_select :user_id, User.all, :id, :name %>
+      <%= link_to "New User", new_user_path %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :movie %><br />
-    <%= f.text_field :movie %>
+
+  <div class="control-group">
+    <%= f.label :movie, class:'control-label' %>
+    <div class="controls">
+      <%= f.collection_select :movie_id, Movie.all, :id, :name %>
+      <%= link_to "New Movie", new_movie_path %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-actions">
+    <%= f.submit class:"btn btn-primary" %>
   </div>
+
 <% end %>
