--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,15 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+  <div class="control-group">
+    <%= f.label :name, class:'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :upid %><br />
-    <%= f.number_field :upid %>
+
+  <div class="control-group">
+    <%= f.label :upid, class:'control-label' %>
+    <div class="controls">
+      <%= f.text_field :upid %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-actions">
+    <%= f.submit class:"btn btn-primary" %>
   </div>
 <% end %>
