--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Rate Movies</a>
+          <a class="brand" href="/ratings/new">Rate Movies</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/ratings">Ratings</a></li>
