--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -13,7 +13,7 @@
 <% @movies.each do |movie| %>
   <tr>
     <td><%= movie.name %></td>
-    <td><%= movie.genre %></td>
+    <td><%= movie.genre_name %></td>
     <td><%= movie.year %></td>
     <td><%= link_to 'Show', movie %></td>
     <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
