--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,9 @@
   <%= @user.upid %>
 </p>
 
+<p>
+  <b>Date Joined:</b>
+  <%= @user.created_at %>
+</p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
