--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -15,6 +15,9 @@
   <%= @movie.year %>
 </p>
 
+<p>
+	<b> Average Rating:</b>
+	<%= @movie.get_score %>
+</p>
 
-<%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
