--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,23 +1,20 @@
 <h1>Listing ratings</h1>
 
-<table>
-  <tr>
-    <th>Score</th>
-    <th>User</th>
-    <th>Movie</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @ratings.each do |rating| %>
+<table class="table table-striped table-bordered table-condensed">  
+  <thead>  
+    <tr>  
+      <th>Rating Score</th>  
+      <th>By User</th>  
+      <th>For Movie</th>   
+    </tr>  
+  </thead>  
+  
+  <% @ratings.each do |rating| %>
   <tr>
     <td><%= rating.score %></td>
     <td><%= rating.user_name %></td>
     <td><%= rating.movie_name %></td>
     <td><%= link_to 'Show', rating %></td>
-    <td><%= link_to 'Edit', edit_rating_path(rating) %></td>
-    <td><%= link_to 'Destroy', rating, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
