--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,18 @@
 <h1>Listing users</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Upid</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @users.each do |user| %>
+<table class="table table-striped table-bordered table-condensed">  
+  <thead>  
+    <tr>  
+      <th>User Name</th>  
+      <th>Unique ID</th>  
+    </tr>  
+  </thead>  
+  
+  <% @users.each do |user| %>
   <tr>
     <td><%= user.name %></td>
     <td><%= user.upid %></td>
     <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
